A very simple view of last 20 operations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <a routerLink="last-blocks">Last Blocks</a> <br/>
-<a routerLink="last-trans">Last Transactions</a>
+<a routerLink="last-operations">Last Operations</a>
 
 <router-outlet></router-outlet>
