Token stats for a contract

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<a routerLink="last-blocks">Last Blocks</a> <br/>
-<a routerLink="last-operations">Last Operations</a>
+<a routerLink="last-blocks">Last Blocks</a> &nbsp;
+<a routerLink="last-operations">Last Operations</a> &nbsp;
+<a routerLink="token-holders">Token Owners</a>
+
+<hr />
 
 <router-outlet></router-outlet>
