--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a mat-tab-link routerLink="last-blocks">Last Blocks <mat-icon>grid_view</mat-icon></a>
   <a mat-tab-link routerLink="last-operations">Last Operations <mat-icon>receipt_long</mat-icon></a>
   <a mat-tab-link routerLink="token-holders">Token Owners <mat-icon>generating_tokens</mat-icon></a>
+  <a mat-tab-link routerLink="token-metadata">Token Metadata <mat-icon>token_metadata</mat-icon></a>
 </nav>
 
 <mat-tab-nav-panel #tabPanel>
